--- a/lem.click/template.conf
+++ b/lem.click/template.conf
@@ -8,23 +8,12 @@ cn           = "lem.click"
 # X.509 v3 extensions
 
 # DNS name(s) of the server
-dns_name = "blog.lem.click"
-dns_name = "blog.lem.link"
-dns_name = "imap.lem.click"
-dns_name = "imap.lem.link"
-dns_name = "imap.libertad.link"
 dns_name = "lem.click"
 dns_name = "lem.link"
 dns_name = "libertad.link"
-dns_name = "munin.libertad.link"
-dns_name = "mx.libertad.link"
-dns_name = "ns1.libertad.link"
-dns_name = "smtp.lem.click"
-dns_name = "smtp.lem.link"
-dns_name = "smtp.libertad.link"
-dns_name = "www.lem.click"
-dns_name = "www.lem.link"
-dns_name = "www.libertad.link"
+dns_name = "*.lem.click"
+dns_name = "*.lem.link"
+dns_name = "*.libertad.link"
 
 # (Optional) Server IP address
 #ip_address = "192.168.1.1"
