Add stray domain

--- a/lem.click/template.conf
+++ b/lem.click/template.conf
@@ -10,10 +10,10 @@ cn           = "lem.click"
 # DNS name(s) of the server
 dns_name = "lem.click"
 dns_name = "lem.link"
-dns_name = "libertad.link"
+dns_name = "lem.sexy"
 dns_name = "*.lem.click"
 dns_name = "*.lem.link"
-dns_name = "*.libertad.link"
+dns_name = "*.lem.sexy"
 
 # (Optional) Server IP address
 #ip_address = "192.168.1.1"
