Add new domain to the examples

--- a/lem.click/template.conf
+++ b/lem.click/template.conf
@@ -11,9 +11,11 @@ cn           = "lem.click"
 dns_name = "lem.click"
 dns_name = "lem.link"
 dns_name = "lem.sexy"
+dns_name = "lem.soy"
 dns_name = "*.lem.click"
 dns_name = "*.lem.link"
 dns_name = "*.lem.sexy"
+dns_name = "*.lem.soy"
 
 # (Optional) Server IP address
 #ip_address = "192.168.1.1"
